# SocketConnection

./: CMakeLists.txt  README.md  lms_package.json
include/socket_connection/: receiver.h  socket_client.h  socket_connection_handler.h  socket_connector.h  socket_listener.h  socket_server.h
include/sockets/: SocketClient.h  SocketServer.h
src/: SocketClient.cpp  SocketServer.cpp  receiver.cpp  socket_client.cpp  socket_connection_handler.cpp  socket_connector.cpp  socket_server.cpp
